--- a/Test1_link.ipynb
+++ b/Test1_link.ipynb
@@ -24,16 +24,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lRXMboHmNF0j",
-        "colab_type": "text"
-      },
-      "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "9ruv_ViAJmJE",
@@ -58,30 +48,189 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ryN_UF2tNMK3",
+        "id": "UzvszlruPl-Z",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "c04fe36a-e687-4b56-c9a3-754413ea31ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
       },
       "source": [
-        ""
+        "!git clone https://github.com/ludmilaexbrayat/recognizing-packagings.git"
       ],
       "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aQnyhxy5R8Jo",
-        "colab_type": "text"
-      },
-      "source": [
-        "Normalement ca devrait marcher"
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'recognizing-packagings'...\n",
+            "remote: Enumerating objects: 21, done.\u001b[K\n",
+            "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Total 21 (delta 4), reused 13 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (21/21), done.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vSeet_EaR-ju",
+        "id": "P7boOzfQKRYd",
+        "colab_type": "code",
+        "outputId": "1a81872a-2ea4-42f9-bdaf-4eb074d8a55c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 731
+        }
+      },
+      "source": [
+        "!git"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "usage: git [--version] [--help] [-C <path>] [-c <name>=<value>]\n",
+            "           [--exec-path[=<path>]] [--html-path] [--man-path] [--info-path]\n",
+            "           [-p | --paginate | --no-pager] [--no-replace-objects] [--bare]\n",
+            "           [--git-dir=<path>] [--work-tree=<path>] [--namespace=<name>]\n",
+            "           <command> [<args>]\n",
+            "\n",
+            "These are common Git commands used in various situations:\n",
+            "\n",
+            "start a working area (see also: git help tutorial)\n",
+            "   clone      Clone a repository into a new directory\n",
+            "   init       Create an empty Git repository or reinitialize an existing one\n",
+            "\n",
+            "work on the current change (see also: git help everyday)\n",
+            "   add        Add file contents to the index\n",
+            "   mv         Move or rename a file, a directory, or a symlink\n",
+            "   reset      Reset current HEAD to the specified state\n",
+            "   rm         Remove files from the working tree and from the index\n",
+            "\n",
+            "examine the history and state (see also: git help revisions)\n",
+            "   bisect     Use binary search to find the commit that introduced a bug\n",
+            "   grep       Print lines matching a pattern\n",
+            "   log        Show commit logs\n",
+            "   show       Show various types of objects\n",
+            "   status     Show the working tree status\n",
+            "\n",
+            "grow, mark and tweak your common history\n",
+            "   branch     List, create, or delete branches\n",
+            "   checkout   Switch branches or restore working tree files\n",
+            "   commit     Record changes to the repository\n",
+            "   diff       Show changes between commits, commit and working tree, etc\n",
+            "   merge      Join two or more development histories together\n",
+            "   rebase     Reapply commits on top of another base tip\n",
+            "   tag        Create, list, delete or verify a tag object signed with GPG\n",
+            "\n",
+            "collaborate (see also: git help workflows)\n",
+            "   fetch      Download objects and refs from another repository\n",
+            "   pull       Fetch from and integrate with another repository or a local branch\n",
+            "   push       Update remote refs along with associated objects\n",
+            "\n",
+            "'git help -a' and 'git help -g' list available subcommands and some\n",
+            "concept guides. See 'git help <command>' or 'git help <concept>'\n",
+            "to read about a specific subcommand or concept.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AEhllZV_KhOl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cd recognizing-packagings"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cex-x5i-K_GL",
+        "colab_type": "code",
+        "outputId": "f759c01a-6e54-46de-8445-99d4e9345edf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "adc.json  recognizing-packagings  sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GjVIJp1VQlgS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cd sample_data"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Aq16M15RLQVA",
+        "colab_type": "code",
+        "outputId": "c30d84c6-4356-49ed-9ff2-fc467e20b6a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "!pwd"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ELSmZlzGRU8U",
+        "colab_type": "text"
+      },
+      "source": [
+        "test si ca marche bien\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ryN_UF2tNMK3",
         "colab_type": "code",
         "colab": {}
       },
