--- a/generate_y_target.ipynb
+++ b/generate_y_target.ipynb
@@ -32,7 +32,8 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -46,7 +47,7 @@
       },
       "source": [
         "# Code to read csv file into Colaboratory:\n",
-        "!pip install -U -q PyDrive\n",
+        "#!pip install -U -q PyDrive\n",
         "from pydrive.auth import GoogleAuth\n",
         "from pydrive.drive import GoogleDrive\n",
         "from google.colab import auth\n",
@@ -65,16 +66,16 @@
       "metadata": {
         "id": "7_sSpVW_ND55",
         "colab_type": "code",
-        "outputId": "292258f0-2177-48af-a5a5-de6196a3c0b0",
+        "outputId": "648d2cc2-c41e-45c9-ebee-a328a14e30f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "link='https://drive.google.com/open?id=1Ptvds34C9RaRuoUbb6fAm7qIKhGZY3KQ'\n",
-        "fluff, id = link.split('=')\n",
-        "print (id) # Verify that you have everything after '='"
+        "link1='https://drive.google.com/open?id=1Ptvds34C9RaRuoUbb6fAm7qIKhGZY3KQ'\n",
+        "fluff1, id1 = link1.split('=')\n",
+        "print(id1) # Verify that you have everything after '='"
       ],
       "execution_count": 3,
       "outputs": [
@@ -95,8 +96,49 @@
         "colab": {}
       },
       "source": [
-        "downloaded = drive.CreateFile({'id':id}) \n",
+        "downloaded = drive.CreateFile({'id':id1}) \n",
         "downloaded.GetContentFile('en.openfoodfacts.org.products.csv')  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mNfvp-rNTxi7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "69520fd3-1c71-46ba-8d40-2918a7155c78"
+      },
+      "source": [
+        "link2='https://drive.google.com/open?id=1vOa3WxtzK-UDKor-5sh2YD9vQc2-IdNX'\n",
+        "fluff2, id2 = link2.split('=')\n",
+        "print(id2) # Verify that you have everything after '='"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1vOa3WxtzK-UDKor-5sh2YD9vQc2-IdNX\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1tU70-28TxnV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "downloaded = drive.CreateFile({'id':id2}) \n",
+        "downloaded.GetContentFile('voc_dico.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -116,7 +158,7 @@
         "df3 = pd.read_csv('en.openfoodfacts.org.products.csv', delimiter='\\t', encoding='UTF-8')\n",
         "# Dataset is now stored in a Pandas Dataframe"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +184,7 @@
       "source": [
         "df3.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +749,7 @@
       "source": [
         "df3.columns"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -768,7 +810,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +904,7 @@
       "source": [
         "df.dropna(inplace=True)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +933,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +963,7 @@
       "source": [
         "df.countries.nunique()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +1006,7 @@
       "source": [
         "df.countries.unique()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +1039,7 @@
       "source": [
         "df.packaging_tags.value_counts()[:50]"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,17 +1110,17 @@
       "metadata": {
         "id": "hMECrJiia8iQ",
         "colab_type": "code",
+        "outputId": "4cbb7e3d-a927-4c52-a364-cd171b110c67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4cbb7e3d-a927-4c52-a364-cd171b110c67"
+        }
       },
       "source": [
         "packages_to_keep = ['plastique', 'conserve', 'metal', 'carton', 'verre', 'bocal', 'brique', 'pot-en-verre', 'papier', 'bouteille-plastique', 'bouteille-en-verre', 'bouteille-verre']\n",
         "len(packages_to_keep)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1122,7 +1164,7 @@
       "source": [
         "df_clean.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,7 +1271,7 @@
       "source": [
         "df_clean.head()"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1320,16 +1362,16 @@
       "metadata": {
         "id": "CxbBzOf3x53u",
         "colab_type": "code",
+        "outputId": "a2e5654f-44ea-4e88-8298-ee39ac5104d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a2e5654f-44ea-4e88-8298-ee39ac5104d8"
+        }
       },
       "source": [
         "df_clean.shape"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1372,7 +1414,7 @@
       "source": [
         "y0.shape"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1429,17 +1471,17 @@
       "metadata": {
         "id": "787JOY5x0kF0",
         "colab_type": "code",
+        "outputId": "88537825-f050-489b-e75d-c495186ddb5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "88537825-f050-489b-e75d-c495186ddb5b"
+        }
       },
       "source": [
         "one_hot_encoding = pd.DataFrame(mlb.fit_transform(y0['packaging_tags_reduced']),columns=mlb.classes_, index=y0.index)\n",
         "one_hot_encoding.head()"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1606,16 +1648,16 @@
       "metadata": {
         "id": "8qD5nh5F2hWl",
         "colab_type": "code",
+        "outputId": "1f7edcc7-4e15-4dc0-cafa-c73baf7c5405",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "1f7edcc7-4e15-4dc0-cafa-c73baf7c5405"
+        }
       },
       "source": [
         "y1.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,16 +1804,16 @@
       "metadata": {
         "id": "Zrbph6VK3Gg8",
         "colab_type": "code",
+        "outputId": "251d8db5-0f0f-4d08-fc24-5c2eb8245374",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "251d8db5-0f0f-4d08-fc24-5c2eb8245374"
+        }
       },
       "source": [
         "y1.shape"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1791,6 +1833,256 @@
       "cell_type": "code",
       "metadata": {
         "id": "z6I2mcbc4Y4A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0VPQGU71UAqq",
+        "colab_type": "text"
+      },
+      "source": [
+        "TRISTAN AND MATHIEU'S PART"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tvztBxA3UCo1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "16dec22a-d5a2-4d89-835f-bca8dede0f7b"
+      },
+      "source": [
+        "df = pd.read_csv('en.openfoodfacts.org.products.csv', delimiter='\\t', encoding='UTF-8')\n",
+        "df_dic = pd.read_csv('voc_dico.csv')"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (0,10,11,17,18,19,20,24,25,26,28,29,30,35,37,40,44,45,46,49,52,66,67) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  interactivity=interactivity, compiler=compiler, result=result)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5iVkMHwpUJDE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "bed9d15a-a400-44e6-cc0a-14f67638f83c"
+      },
+      "source": [
+        "#clean df\n",
+        "df = df[~df['image_url'].isna()]\n",
+        "df= df[['code', 'packaging_tags']].dropna().drop_duplicates('code')\n",
+        "df.head()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>code</th>\n",
+              "      <th>packaging_tags</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>0000000001281</td>\n",
+              "      <td>barquette,plastique</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>140</th>\n",
+              "      <td>0000000020114</td>\n",
+              "      <td>bocal,plastique</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>144</th>\n",
+              "      <td>0000000024600</td>\n",
+              "      <td>plastique</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>296</th>\n",
+              "      <td>0000000274722</td>\n",
+              "      <td>carton,plastique</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>297</th>\n",
+              "      <td>0000000274739</td>\n",
+              "      <td>plastique,carton</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              code       packaging_tags\n",
+              "16   0000000001281  barquette,plastique\n",
+              "140  0000000020114      bocal,plastique\n",
+              "144  0000000024600            plastique\n",
+              "296  0000000274722     carton,plastique\n",
+              "297  0000000274739     plastique,carton"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IZLtErGAUnuG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "6549ec6e-9016-4dba-80e4-8012ff4e6a8c"
+      },
+      "source": [
+        "df_dic.head()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Label</th>\n",
+              "      <th>Col</th>\n",
+              "      <th>Col1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>plastique</td>\n",
+              "      <td>Plastique</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>plastiktute</td>\n",
+              "      <td>Plastique</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4-pe-ld</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>fr-bouteille-verre</td>\n",
+              "      <td>Verre</td>\n",
+              "      <td>Bouteille</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Label        Col       Col1\n",
+              "0           plastique  Plastique        NaN\n",
+              "1         plastiktute  Plastique        NaN\n",
+              "2                   2        NaN        NaN\n",
+              "3             4-pe-ld        NaN        NaN\n",
+              "4  fr-bouteille-verre      Verre  Bouteille"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E3S99FyiUc4_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#get dictionaries to replace values\n",
+        "dic_transfo1 = dict(zip(df_dic.Label, df_dic.Col))\n",
+        "dic_transfo2 = dict(zip(df_dic.Label, df_dic.Col1))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wOSKqX0zUvHS",
         "colab_type": "code",
         "colab": {}
       },
