--- a/generate_y_target.ipynb
+++ b/generate_y_target.ipynb
@@ -2084,6 +2084,98 @@
       "metadata": {
         "id": "wOSKqX0zUvHS",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "745881f9-1219-441c-e097-bca8092e57a7"
+      },
+      "source": [
+        "df_1 = df.set_index('code')['packaging_tags'].str.split(',', expand=True)\n",
+        "value_vars_1 = df_1.columns \n",
+        "df_1 = df_1.reset_index()\n",
+        "df_2 = pd.melt(df_1, id_vars = 'code', value_vars = value_vars_1).dropna()[['code','value']]\n",
+        "df_2.head()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>code</th>\n",
+              "      <th>value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0000000001281</td>\n",
+              "      <td>barquette</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0000000020114</td>\n",
+              "      <td>bocal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0000000024600</td>\n",
+              "      <td>plastique</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0000000274722</td>\n",
+              "      <td>carton</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0000000274739</td>\n",
+              "      <td>plastique</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            code      value\n",
+              "0  0000000001281  barquette\n",
+              "1  0000000020114      bocal\n",
+              "2  0000000024600  plastique\n",
+              "3  0000000274722     carton\n",
+              "4  0000000274739  plastique"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9UqxQH0iU8DI",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
